backend_error.txt
.venv\Scripts\python.exe : 
Traceback (most recent call 
last):
En línea: 1 Carácter: 52
+ ... s\backend"; 
.venv\Scripts\python.exe -m 
uvicorn src.app:app --host 
0. ...
+                 ~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (Trace  
  back (most recent call    
 last)::String) [], Remo    
teException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
  File "<frozen runpy>", 
line 198, in 
_run_module_as_main
  File "<frozen runpy>", 
line 88, in _run_code
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\__main__.py", line 4, 
in <module>
    uvicorn.main()
    ~~~~~~~~~~~~^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\cl
ick\core.py", line 1485, in 
__call__
    return self.main(*args, 
**kwargs)
           
~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\cl
ick\core.py", line 1406, in 
main
    rv = self.invoke(ctx)
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\cl
ick\core.py", line 1269, in 
invoke
    return 
ctx.invoke(self.callback, 
**ctx.params)
           ~~~~~~~~~~^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\cl
ick\core.py", line 824, in 
invoke
    return callback(*args, 
**kwargs)
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\main.py", line 424, 
in main
    run(
    ~~~^
        app,
        ^^^^
    ...<46 lines>...
        h11_max_incomplete_e
vent_size=h11_max_incomplete
_event_size,
        ^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^
    )
    ^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\main.py", line 594, 
in run
    server.run()
    ~~~~~~~~~~^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\server.py", line 67, 
in run
    return asyncio_run(self.
serve(sockets=sockets), loop
_factory=self.config.get_loo
p_factory())
  File "C:\Users\santi\AppDa
ta\Local\Programs\Python\Pyt
hon313\Lib\asyncio\runners.p
y", line 195, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "C:\Users\santi\AppDa
ta\Local\Programs\Python\Pyt
hon313\Lib\asyncio\runners.p
y", line 118, in run
    return self._loop.run_un
til_complete(task)
           ~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~^^^^^^
  File "C:\Users\santi\AppDa
ta\Local\Programs\Python\Pyt
hon313\Lib\asyncio\base_even
ts.py", line 725, in 
run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\server.py", line 71, 
in serve
    await 
self._serve(sockets)
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\server.py", line 78, 
in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\config.py", line 439, 
in load
    self.loaded_app = 
import_from_string(self.app)
                      
~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\ElSerranoServicio
s\.venv\Lib\site-packages\uv
icorn\importer.py", line 
19, in import_from_string
    module = importlib.impor
t_module(module_str)
  File "C:\Users\santi\AppDa
ta\Local\Programs\Python\Pyt
hon313\Lib\importlib\__init_
_.py", line 88, in 
import_module
    return _bootstrap._gcd_i
mport(name[level:], 
package, level)
           ~~~~~~~~~~~~~~~~~
~~~~~^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^
  File "<frozen 
importlib._bootstrap>", 
line 1387, in _gcd_import
  File "<frozen 
importlib._bootstrap>", 
line 1360, in _find_and_load
  File "<frozen 
importlib._bootstrap>", 
line 1331, in 
_find_and_load_unlocked
  File "<frozen 
importlib._bootstrap>", 
line 935, in _load_unlocked
  File "<frozen importlib._b
ootstrap_external>", line 
1027, in exec_module
  File "<frozen 
importlib._bootstrap>", 
line 488, in 
_call_with_frames_removed
  File "c:\ElSerranoServicio
s\backend\src\app.py", line 
12, in <module>
    from src.routers import 
auth, zones, rutas, 
clientes, pedidos, 
frecuentes, driver, 
balances, dashboard
  File "c:\ElSerranoServicio
s\backend\src\routers\balanc
es.py", line 48
    db: 
Annotated[AsyncSession, 
Depends(get_db)],
    ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^
SyntaxError: parameter 
without a default follows 
parameter with a default
